# frappe-zakat

./: CHANGELOG.md  README.md  pyproject.toml
frappe_zakat/: hooks.py  modules.txt
frappe_zakat/frappe_zakat/doctype/zakat_calculation/: test_zakat_calculation.py  zakat_calculation.js  zakat_calculation.json  zakat_calculation.py
frappe_zakat/frappe_zakat/doctype/zakat_gold_item/: zakat_gold_item.json  zakat_gold_item.py
frappe_zakat/frappe_zakat/report/annual_zakat/: annual_zakat.js  annual_zakat.json  annual_zakat.py
frappe_zakat/frappe_zakat/workspace/zakat/: zakat.json
