[project]
name = "frappe_zakat"
authors = [
    { name = "Lavaloon", email = "info@lavaloon.com"}
]
description = "Frappe Zakat App to help business owners and individuals to calculate the required ZAKAT amount based on the Islamic regulations."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
